fix on mobile

--- a/2016-2017/2_Holidays/site/css/style.css
+++ b/2016-2017/2_Holidays/site/css/style.css
@@ -376,7 +376,7 @@ footer #changeLang {
 	footer #changeLang {
 		position: absolute;
 			top: 8px;
-			right: 50px;
+			right: 30px;
 	}
 
 }
